; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse_declarations.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse_declarations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@YY___EXTENSION__ = common dso_local global i32 0, align 4
@YY_TYPEDEF = common dso_local global i32 0, align 4
@YY_EXTERN = common dso_local global i32 0, align 4
@YY_STATIC = common dso_local global i32 0, align 4
@YY_AUTO = common dso_local global i32 0, align 4
@YY_REGISTER = common dso_local global i32 0, align 4
@YY_INLINE = common dso_local global i32 0, align 4
@YY___INLINE = common dso_local global i32 0, align 4
@YY___INLINE__ = common dso_local global i32 0, align 4
@YY__NORETURN = common dso_local global i32 0, align 4
@YY__ALIGNAS = common dso_local global i32 0, align 4
@YY___ATTRIBUTE = common dso_local global i32 0, align 4
@YY___ATTRIBUTE__ = common dso_local global i32 0, align 4
@YY___DECLSPEC = common dso_local global i32 0, align 4
@YY___CDECL = common dso_local global i32 0, align 4
@YY___STDCALL = common dso_local global i32 0, align 4
@YY___FASTCALL = common dso_local global i32 0, align 4
@YY___THISCALL = common dso_local global i32 0, align 4
@YY___VECTORCALL = common dso_local global i32 0, align 4
@YY_CONST = common dso_local global i32 0, align 4
@YY___CONST = common dso_local global i32 0, align 4
@YY___CONST__ = common dso_local global i32 0, align 4
@YY_RESTRICT = common dso_local global i32 0, align 4
@YY___RESTRICT = common dso_local global i32 0, align 4
@YY___RESTRICT__ = common dso_local global i32 0, align 4
@YY_VOLATILE = common dso_local global i32 0, align 4
@YY___VOLATILE = common dso_local global i32 0, align 4
@YY___VOLATILE__ = common dso_local global i32 0, align 4
@YY__ATOMIC = common dso_local global i32 0, align 4
@YY_VOID = common dso_local global i32 0, align 4
@YY_CHAR = common dso_local global i32 0, align 4
@YY_SHORT = common dso_local global i32 0, align 4
@YY_INT = common dso_local global i32 0, align 4
@YY_LONG = common dso_local global i32 0, align 4
@YY_FLOAT = common dso_local global i32 0, align 4
@YY_DOUBLE = common dso_local global i32 0, align 4
@YY_SIGNED = common dso_local global i32 0, align 4
@YY_UNSIGNED = common dso_local global i32 0, align 4
@YY__BOOL = common dso_local global i32 0, align 4
@YY__COMPLEX = common dso_local global i32 0, align 4
@YY_COMPLEX = common dso_local global i32 0, align 4
@YY___COMPLEX = common dso_local global i32 0, align 4
@YY___COMPLEX__ = common dso_local global i32 0, align 4
@YY_STRUCT = common dso_local global i32 0, align 4
@YY_UNION = common dso_local global i32 0, align 4
@YY_ENUM = common dso_local global i32 0, align 4
@YY_ID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"\82\FF\FF\FF\FFG\F0\0F\00\00\00\02\00\00", align 1
@ZEND_FFI_ATTR_INIT = common dso_local global i32 0, align 4
@YY__STAR = common dso_local global i32 0, align 4
@YY__LPAREN = common dso_local global i32 0, align 4
@YY___ASM__ = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"'(' expected, got\00", align 1
@YY_STRING = common dso_local global i32 0, align 4
@YY__RPAREN = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [18 x i8] c"')' expected, got\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"\00\00\00\00\00\00\F0\0F\00\00\00\00\00\00", align 1
@YY__EQUAL = common dso_local global i32 0, align 4
@YY__COMMA = common dso_local global i32 0, align 4
@YY__SEMICOLON = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [18 x i8] c"';' expected, got\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @parse_declarations to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_declarations(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br label %8

8:                                                ; preds = %181, %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @YY___EXTENSION__, align 4
  %11 = load i32, i32* @YY_TYPEDEF, align 4
  %12 = load i32, i32* @YY_EXTERN, align 4
  %13 = load i32, i32* @YY_STATIC, align 4
  %14 = load i32, i32* @YY_AUTO, align 4
  %15 = load i32, i32* @YY_REGISTER, align 4
  %16 = load i32, i32* @YY_INLINE, align 4
  %17 = load i32, i32* @YY___INLINE, align 4
  %18 = load i32, i32* @YY___INLINE__, align 4
  %19 = load i32, i32* @YY__NORETURN, align 4
  %20 = load i32, i32* @YY__ALIGNAS, align 4
  %21 = load i32, i32* @YY___ATTRIBUTE, align 4
  %22 = load i32, i32* @YY___ATTRIBUTE__, align 4
  %23 = load i32, i32* @YY___DECLSPEC, align 4
  %24 = load i32, i32* @YY___CDECL, align 4
  %25 = load i32, i32* @YY___STDCALL, align 4
  %26 = load i32, i32* @YY___FASTCALL, align 4
  %27 = load i32, i32* @YY___THISCALL, align 4
  %28 = load i32, i32* @YY___VECTORCALL, align 4
  %29 = load i32, i32* @YY_CONST, align 4
  %30 = load i32, i32* @YY___CONST, align 4
  %31 = load i32, i32* @YY___CONST__, align 4
  %32 = load i32, i32* @YY_RESTRICT, align 4
  %33 = load i32, i32* @YY___RESTRICT, align 4
  %34 = load i32, i32* @YY___RESTRICT__, align 4
  %35 = load i32, i32* @YY_VOLATILE, align 4
  %36 = load i32, i32* @YY___VOLATILE, align 4
  %37 = load i32, i32* @YY___VOLATILE__, align 4
  %38 = load i32, i32* @YY__ATOMIC, align 4
  %39 = load i32, i32* @YY_VOID, align 4
  %40 = load i32, i32* @YY_CHAR, align 4
  %41 = load i32, i32* @YY_SHORT, align 4
  %42 = load i32, i32* @YY_INT, align 4
  %43 = load i32, i32* @YY_LONG, align 4
  %44 = load i32, i32* @YY_FLOAT, align 4
  %45 = load i32, i32* @YY_DOUBLE, align 4
  %46 = load i32, i32* @YY_SIGNED, align 4
  %47 = load i32, i32* @YY_UNSIGNED, align 4
  %48 = load i32, i32* @YY__BOOL, align 4
  %49 = load i32, i32* @YY__COMPLEX, align 4
  %50 = load i32, i32* @YY_COMPLEX, align 4
  %51 = load i32, i32* @YY___COMPLEX, align 4
  %52 = load i32, i32* @YY___COMPLEX__, align 4
  %53 = load i32, i32* @YY_STRUCT, align 4
  %54 = load i32, i32* @YY_UNION, align 4
  %55 = load i32, i32* @YY_ENUM, align 4
  %56 = load i32, i32* @YY_ID, align 4
  %57 = call i64 @YY_IN_SET(i32 %9, i32 %56, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %183

59:                                               ; preds = %8
  %60 = load i32, i32* @ZEND_FFI_ATTR_INIT, align 4
  store i32 %60, i32* %3, align 4
  %61 = load i32, i32* %2, align 4
  %62 = load i32, i32* @YY___EXTENSION__, align 4
  %63 = icmp eq i32 %61, %62
  br i1 %63, label %64, label %66

64:                                               ; preds = %59
  %65 = call i32 (...) @get_sym()
  store i32 %65, i32* %2, align 4
  br label %66

66:                                               ; preds = %64, %59
  %67 = load i32, i32* %2, align 4
  %68 = call i32 @parse_declaration_specifiers(i32 %67, i32* %3)
  store i32 %68, i32* %2, align 4
  %69 = load i32, i32* %2, align 4
  %70 = load i32, i32* @YY__STAR, align 4
  %71 = icmp eq i32 %69, %70
  br i1 %71, label %80, label %72

72:                                               ; preds = %66
  %73 = load i32, i32* %2, align 4
  %74 = load i32, i32* @YY_ID, align 4
  %75 = icmp eq i32 %73, %74
  br i1 %75, label %80, label %76

76:                                               ; preds = %72
  %77 = load i32, i32* %2, align 4
  %78 = load i32, i32* @YY__LPAREN, align 4
  %79 = icmp eq i32 %77, %78
  br i1 %79, label %80, label %174

80:                                               ; preds = %76, %72, %66
  %81 = load i32, i32* %3, align 4
  store i32 %81, i32* %6, align 4
  %82 = load i32, i32* %2, align 4
  %83 = call i32 @parse_declarator(i32 %82, i32* %6, i8** %4, i64* %5)
  store i32 %83, i32* %2, align 4
  %84 = load i32, i32* %2, align 4
  %85 = load i32, i32* @YY___ASM__, align 4
  %86 = icmp eq i32 %84, %85
  br i1 %86, label %87, label %113

87:                                               ; preds = %80
  %88 = call i32 (...) @get_sym()
  store i32 %88, i32* %2, align 4
  %89 = load i32, i32* %2, align 4
  %90 = load i32, i32* @YY__LPAREN, align 4
  %91 = icmp ne i32 %89, %90
  br i1 %91, label %92, label %95

92:                                               ; preds = %87
  %93 = load i32, i32* %2, align 4
  %94 = call i32 @yy_error_sym(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 %93)
  br label %95

95:                                               ; preds = %92, %87
  %96 = call i32 (...) @get_sym()
  store i32 %96, i32* %2, align 4
  br label %97

97:                                               ; preds = %100, %95
  %98 = load i32, i32* %2, align 4
  %99 = call i32 @parse_STRING(i32 %98, i32* %7)
  store i32 %99, i32* %2, align 4
  br label %100

100:                                              ; preds = %97
  %101 = load i32, i32* %2, align 4
  %102 = load i32, i32* @YY_STRING, align 4
  %103 = icmp eq i32 %101, %102
  br i1 %103, label %97, label %104

104:                                              ; preds = %100
  %105 = load i32, i32* %2, align 4
  %106 = load i32, i32* @YY__RPAREN, align 4
  %107 = icmp ne i32 %105, %106
  br i1 %107, label %108, label %111

108:                                              ; preds = %104
  %109 = load i32, i32* %2, align 4
  %110 = call i32 @yy_error_sym(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i32 %109)
  br label %111

111:                                              ; preds = %108, %104
  %112 = call i32 (...) @get_sym()
  store i32 %112, i32* %2, align 4
  br label %113

113:                                              ; preds = %111, %80
  %114 = load i32, i32* %2, align 4
  %115 = load i32, i32* @YY___ATTRIBUTE, align 4
  %116 = load i32, i32* @YY___ATTRIBUTE__, align 4
  %117 = load i32, i32* @YY___DECLSPEC, align 4
  %118 = load i32, i32* @YY___CDECL, align 4
  %119 = load i32, i32* @YY___STDCALL, align 4
  %120 = load i32, i32* @YY___FASTCALL, align 4
  %121 = load i32, i32* @YY___THISCALL, align 4
  %122 = load i32, i32* @YY___VECTORCALL, align 4
  %123 = call i64 @YY_IN_SET(i32 %114, i32 %122, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %124 = icmp ne i64 %123, 0
  br i1 %124, label %125, label %128

125:                                              ; preds = %113
  %126 = load i32, i32* %2, align 4
  %127 = call i32 @parse_attributes(i32 %126, i32* %6)
  store i32 %127, i32* %2, align 4
  br label %128

128:                                              ; preds = %125, %113
  %129 = load i32, i32* %2, align 4
  %130 = load i32, i32* @YY__EQUAL, align 4
  %131 = icmp eq i32 %129, %130
  br i1 %131, label %132, label %135

132:                                              ; preds = %128
  %133 = load i32, i32* %2, align 4
  %134 = call i32 @parse_initializer(i32 %133)
  store i32 %134, i32* %2, align 4
  br label %135

135:                                              ; preds = %132, %128
  %136 = load i8*, i8** %4, align 8
  %137 = load i64, i64* %5, align 8
  %138 = call i32 @zend_ffi_declare(i8* %136, i64 %137, i32* %6)
  br label %139

139:                                              ; preds = %169, %135
  %140 = load i32, i32* %2, align 4
  %141 = load i32, i32* @YY__COMMA, align 4
  %142 = icmp eq i32 %140, %141
  br i1 %142, label %143, label %173

143:                                              ; preds = %139
  %144 = call i32 (...) @get_sym()
  store i32 %144, i32* %2, align 4
  %145 = load i32, i32* %3, align 4
  store i32 %145, i32* %6, align 4
  %146 = load i32, i32* %2, align 4
  %147 = call i32 @parse_declarator(i32 %146, i32* %6, i8** %4, i64* %5)
  store i32 %147, i32* %2, align 4
  %148 = load i32, i32* %2, align 4
  %149 = load i32, i32* @YY___ATTRIBUTE, align 4
  %150 = load i32, i32* @YY___ATTRIBUTE__, align 4
  %151 = load i32, i32* @YY___DECLSPEC, align 4
  %152 = load i32, i32* @YY___CDECL, align 4
  %153 = load i32, i32* @YY___STDCALL, align 4
  %154 = load i32, i32* @YY___FASTCALL, align 4
  %155 = load i32, i32* @YY___THISCALL, align 4
  %156 = load i32, i32* @YY___VECTORCALL, align 4
  %157 = call i64 @YY_IN_SET(i32 %148, i32 %156, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %158 = icmp ne i64 %157, 0
  br i1 %158, label %159, label %162

159:                                              ; preds = %143
  %160 = load i32, i32* %2, align 4
  %161 = call i32 @parse_attributes(i32 %160, i32* %6)
  store i32 %161, i32* %2, align 4
  br label %162

162:                                              ; preds = %159, %143
  %163 = load i32, i32* %2, align 4
  %164 = load i32, i32* @YY__EQUAL, align 4
  %165 = icmp eq i32 %163, %164
  br i1 %165, label %166, label %169

166:                                              ; preds = %162
  %167 = load i32, i32* %2, align 4
  %168 = call i32 @parse_initializer(i32 %167)
  store i32 %168, i32* %2, align 4
  br label %169

169:                                              ; preds = %166, %162
  %170 = load i8*, i8** %4, align 8
  %171 = load i64, i64* %5, align 8
  %172 = call i32 @zend_ffi_declare(i8* %170, i64 %171, i32* %6)
  br label %139

173:                                              ; preds = %139
  br label %174

174:                                              ; preds = %173, %76
  %175 = load i32, i32* %2, align 4
  %176 = load i32, i32* @YY__SEMICOLON, align 4
  %177 = icmp ne i32 %175, %176
  br i1 %177, label %178, label %181

178:                                              ; preds = %174
  %179 = load i32, i32* %2, align 4
  %180 = call i32 @yy_error_sym(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.4, i64 0, i64 0), i32 %179)
  br label %181

181:                                              ; preds = %178, %174
  %182 = call i32 (...) @get_sym()
  store i32 %182, i32* %2, align 4
  br label %8

183:                                              ; preds = %8
  %184 = load i32, i32* %2, align 4
  ret i32 %184
}

declare dso_local i64 @YY_IN_SET(i32, i32, i8*) #1

declare dso_local i32 @get_sym(...) #1

declare dso_local i32 @parse_declaration_specifiers(i32, i32*) #1

declare dso_local i32 @parse_declarator(i32, i32*, i8**, i64*) #1

declare dso_local i32 @yy_error_sym(i8*, i32) #1

declare dso_local i32 @parse_STRING(i32, i32*) #1

declare dso_local i32 @parse_attributes(i32, i32*) #1

declare dso_local i32 @parse_initializer(i32) #1

declare dso_local i32 @zend_ffi_declare(i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
